[package]
name = "app"
version = "1.0.0"
edition = "2021"




[dependencies]
actix = "0.13"
actix-broker = "0.4"
actix-codec = "0.5"
actix-cors = "0.6"
actix-files = "0.6"
actix-http = "3.4"
actix-identity = "0.5"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"
actix-protobuf = "0.9"
actix-session = "0.7"
actix-test = "0.1"
actix-tls = "3.1.1"
actix-utils = "3"
actix-web = "4.4"
actix-web-actors = "4.1"
actix-web-lab = "0.19"
actix-ws = "0.2.5"
awc = "3.2"

chrono = { version = "0.4.20", default-features = false, features = ["clock", "serde"] }
derive_more = "0.99.7"
dotenv = "0.15"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
log = "0.4"
openssl = { version = "0.10.55", features = ["v110"] }
rand = "0.8"
rustls = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24.2", features = ["sync", "io-util"] }
tokio-util = "0.7.4"
websocket = "0.27.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.dev]
debug-assertions = true
